# Selecting-seed-phrases

./: .env  .env.example  CMakeLists.txt  README.md  install_checkers_npm.bat  run_checker.bat  run_legacy_export.bat  run_manual_test.bat  run_mass_btc_eth.bat  run_project.bat  run_split_export.bat  vcpkg.json
config/checkers/: checkers.config.json  evm-networks.ts  solana-networks.ts
data/: README.md  evm_rpc_urls.txt  evm_token_contracts.txt  proxies.txt  sol_rpc_urls.txt
include/bip39/: mnemonic_generator.hpp  mnemonic_validator.hpp  wordlist.hpp
include/chains/: bitcoin_module.hpp  ethereum_module.hpp  i_chain_module.hpp  solana_module.hpp  ton_module.hpp
include/cli/: args.hpp
include/core/: secure_buffer.hpp  thread_pool.hpp  types.hpp
include/engine/: candidate_queue.hpp  matcher.hpp  pipeline.hpp
migrations/: 001_create_recovered_wallets.sql  002_split_wallet_tables.sql
scripts/: check_wallet_balances.py  db_migrate.bat  db_migrate.sh  export_split_recovered_wallets.py  migrate_legacy_wallets_to_split.py
scripts/bitcoin-checker/: README.md  index.ts  package.json  tsconfig.json  types.ts
scripts/bitcoin-checker/config/: index.ts  networks.ts
scripts/bitcoin-checker/services/: AllNetworksChecker.ts  ConfigManager.ts  CsvExporter.ts  DatabaseWalletRepository.ts  UIService.ts  WalletChecker.ts
scripts/checker-shared/: paths.ts
scripts/evm-checker/: README.md  index.ts  package-lock.json  package.json  types.ts
scripts/evm-checker/config/: index.ts
scripts/evm-checker/services/: AllNetworksChecker.ts  BalanceService.ts  ConfigManager.patch.ts  ConfigManager.ts  CsvExporter.ts  DatabaseWalletRepository.ts  WalletChecker.ts
scripts/solana-checker/: README.md  index.ts  package.json  tsconfig.json  types.ts
scripts/solana-checker/config/: index.ts  networks.ts
scripts/solana-checker/services/: AllNetworksChecker.ts  BalanceService.ts  ConfigManager.ts  CsvExporter.ts  DatabaseWalletRepository.ts  UIService.ts  WalletChecker.ts
src/: main.cpp
src/bip39/: mnemonic_generator.cpp  mnemonic_validator.cpp  wordlist.cpp
src/chains/: bitcoin_module.cpp  common.cpp  common.hpp  ethereum_module.cpp  solana_module.cpp  ton_module.cpp
src/cli/: args.cpp
src/engine/: matcher.cpp  pipeline.cpp
tests/: test_bip39.cpp  test_cli_args.cpp  test_derivation.cpp  test_matcher_ton.cpp  test_mnemonic_generator.cpp  test_pipeline.cpp  test_ton_known_vector.cpp
